--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -301,19 +301,26 @@ html, body {
     background-color: lightgrey; /* light gray for inactive */
 }
 
+
+.status {
+    color: white;
+    padding: 5px 8px;
+    border-radius: 4px;
+    font-weight: bold;
+    display: inline-flex;
+}
+
 .frame-green {
-    color: white; 
-    background-color: #16bf42; 
-    padding: 5px 6px; 
-    border-radius: 3px;
+    background-color: #28a745; /* green */
+}
+
+.frame-oren {
+    background-color: #ffc107; /* amber/orange */
+    color: black; /* better contrast */
 }
 
 .frame-red {
-    color: white; 
-    background-color: #e93838; 
-    padding: 5px 6px; 
-    border-radius: 3px;
-    display: inline-flex;
+    background-color: #dc3545; /* red */
 }
 
 
