--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -260,18 +260,18 @@
                                 Exam Time  : <strong>{{ row.examStartTime.strftime("%H:%M") }} - {{ row.examEndTime.strftime("%H:%M") }}</strong><br>
                                 Exam Period: <strong>{{ (row.examEndTime - row.examStartTime).seconds // 3600 }}h {{ ((row.examEndTime - row.examStartTime).seconds % 3600) // 60 }}m </strong><br>
                             {% else %}
-                                <span class="frame-red">Exam details not yet assigned</span><br>
+                                <span class="status frame-red">Exam details not yet assigned</span><br>
                             {% endif %}
                             {% if row.examVenue %}
                                 Exam Venue : <strong>{{ row.examVenue }}</strong>
                             {% else %}
-                                <span class="frame-red">Exam Venue : [ERROR]</span>
+                                <span class="status frame-red">Exam Venue : [ERROR]</span>
                             {% endif %}
                         </td>
                     
                         <td>
                             {% if row.examNoInvigilator == 0 %}
-                                <span class="frame-red">Error: No Invigilator Assigned!</span>
+                                <span class="status frame-red">Error: No Invigilator Assigned!</span>
                             {% else %}
                                 [{{ row.examNoInvigilator }}]
                             {% endif %}
