--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -308,6 +308,7 @@ html, body {
     border-radius: 4px;
     font-weight: bold;
     display: inline-flex;
+    margin-bottom: 3px;
 }
 
 .frame-green {
