--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -30,11 +30,11 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Activated Courses</h3>
-                    <p class="dashboard-text" style="color:green;">{{ courses_by_department|length }}</p>
+                    <p class="dashboard-text" style="color:green;">{{ courses_by_department | sum(attribute='count') }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Inactivated Courses</h3>
-                    <p class="dashboard-text" style="color:red;">{{ course_data|length - courses_by_department|length }}</p>
+                    <p class="dashboard-text" style="color:red;">{{ course_data|length - courses_by_department | sum(attribute='count') }}</p>
                 </div>
             </div>
         </div>
