--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -243,12 +243,14 @@
                     <tr class="{% if row.examNoInvigilator == 0 or row.examStartTime is none or row.examEndTime is none or row.examVenue is none %}error-row-show{% endif %}">
                         <td>{{ loop.index }}</td>
                         <td>
-                            Course Name        : <strong>{{ row.course.courseName }}</strong><br>
-                            Course Code/Section: <strong>{{ row.course.courseCodeSection }}</strong><br>
-                            Program Code       : <strong>{{     row.course.courseDepartment }}</strong><br>
-                            Number of Students : <strong>{{ row.course.courseStudent }}</strong><br>
-                            Practical Lecturer : <strong>{{ row.course.practicalLecturer.userName if row.course.practicalLecturer else 'N/A' }}</strong><br>
-                            Tutorial Lecturer  : <strong>{{ row.course.tutorialLecturer.userName if row.course.tutorialLecturer else 'N/A' }}</strong>
+                            <div class="info-grid">
+                                <div>Course Name</div><div><strong>{{ row.course.courseName }}</strong></div>
+                                <div>Course Code/Section</div><div><strong>{{ row.course.courseCodeSection }}</strong></div>
+                                <div>Program Code</div><div><strong>{{ row.course.courseDepartment }}</strong></div>
+                                <div>Number of Students</div><div><strong>{{ row.course.courseStudent }}</strong></div>
+                                <div>Practical Lecturer</div><div><strong>{{ row.course.practicalLecturer.userName if row.course.practicalLecturer else 'N/A' }}</strong></div>
+                                <div>Tutorial Lecturer</div><div><strong>{{ row.course.tutorialLecturer.userName if row.course.tutorialLecturer else 'N/A' }}</strong></div>
+                            </div>
                         </td>
                         <td>[{{ row.examId }}]</td>
 
