--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -93,30 +93,34 @@
 
                             <!-- Course Details -->
                             <td rowspan="{{ rowspan }}">
-                                Course Name        : {{ att.report.exam.course.courseName }} <br>
-                                Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
-                                Number of Students : {{ att.report.exam.course.courseStudent }}
+                                <div class="info-grid">
+                                    <div>Course Name</div><div><strong>: {{ att.report.exam.course.courseName }}</strong></div>
+                                    <div>Course Code/Section</div><div><strong>: {{ att.report.exam.course.courseCodeSection }}</strong></div>
+                                    <div>Number of Students</div><div><strong>: {{ att.report.exam.course.courseStudent }}</strong></div>
+                                </div>
                             </td>
 
                             <!-- Exam Details -->
                             <td rowspan="{{ rowspan }}">
-                                Exam Date   : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
-                                Exam Day    : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                Exam Time   : [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
-                                Exam Period : [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h 
-                                              {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]<br>
-                                Exam Venue  : [{{ att.report.exam.examVenue }}]
+                                <div class="info-grid">
+                                    <div>Exam Date</div><div><strong>: {{ att.report.exam.examStartTime.strftimestrftime("%d/%b/%Y") }} - {{ att.report.exam.examEndTime.strftimestrftime("%d/%b/%Y") }}</strong></div>
+                                    <div>Exam Day</div><div><strong>{{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }}</strong></div>
+                                    <div>Exam Time</div><div><strong>{{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }}</strong></div>
+                                    <div>Exam Period</div><div><strong>{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 3600) // 60 }}m</strong></div>
+                                    <div>Exam Venue</div><div><strong>{{ att.report.exam.examVenue }}</strong></div>
+                                </div>
                             </td>
 
-
-                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
+                            <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
 
                             <!-- Invigilator Details (one per row) -->
                             <td>
-                                ID     : {{ att.invigilator.userId }} <br>
-                                Name   : {{ att.invigilator.userName }} <br>
-                                Contact: {{ att.invigilator.userContact }}
+                                <div class="info-grid">
+                                    <div>ID</div><div><strong>: {{ att.invigilator.userId }}</strong></div>
+                                    <div>Name</div><div><strong>: {{ att.invigilator.userName }}</strong></div>
+                                    <div>Contact</div><div><strong>: {{ att.invigilator.userContact }}</strong></div>
+                                </div>
                             </td>
 
                             <!-- Attendance Status (per invigilator) -->
